# data_communicator

./: Cargo.toml  README.md
src/: change.rs  changer.rs  communicator.rs  container.rs  lib.rs  query.rs  storage.rs  tests.rs
src/buffered/: actions.rs  change.rs  communicator.rs  container.rs  data.rs  mod.rs  query.rs  responses.rs  storage.rs  test_impl.rs  utils.rs
src/buffered/container/: comm_info.rs  data_to_comm.rs  reciver.rs  resolving_actions.rs  update_sender.rs
src/communicator/: data.rs
src/container/: comm_info.rs  reciver.rs  resolving_actions.rs  storage.rs  update_sender.rs
src/simple/: changer.rs  communicator.rs  mod.rs  storage.rs
src/tests/: action.rs  communicators.rs  lib_impls.rs  sequential.rs
