[package]
name = "data_communicator"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
itertools = "0.13.0"
lazy_async_promise = "0.5.0"
tokio = { version = "1.38.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.1", features = ["v4"] }
